--- a/Graphene_Data_Cleaning.ipynb
+++ b/Graphene_Data_Cleaning.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqDPQH+dGaztbZWvn+Q8bi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +100,7 @@
         "    # Walk through all subdirectories and files in the source directory\n",
         "    for root, _, files in os.walk(source_dir):\n",
         "        for file in files:\n",
-        "            # Check if the file is an image (optional: you can add more formats)\n",
+        "            # Check if the file is an image\n",
         "            if file.lower().endswith(('10x.png', '10x.jpg', '10x.jpeg', '10x.gif', '10x.bmp', '10x.tiff')):\n",
         "                # Define the new filename with sequential numbering\n",
         "                new_filename = f\"{image_counter}.jpg\"\n",
@@ -133,7 +132,6 @@
         "    shutil.make_archive(zip_path, 'zip', folder_path)\n",
         "    print(f\"Folder zipped as {zip_path}.zip\")\n",
         "\n",
-        "# Example usage\n",
         "folder_to_zip = '/content/Graphene Clean Dataset/Graphene Clean Dataset/resized_images'\n",
         "zip_file_path = 'zipfolder'  # No .zip extension needed\n",
         "zip_folder(folder_to_zip, zip_file_path)\n",
@@ -265,7 +263,6 @@
         "\n",
         "    return sections\n",
         "\n",
-        "# Example usage\n",
         "image_path = '/content/folder3/1.jpg'\n",
         "sections = split_image_into_56_sections(image_path)\n",
         "\n",
@@ -352,7 +349,6 @@
         "            base_filename = os.path.splitext(filename)[0]\n",
         "            split_image_into_56_sections(image_path, output_folder, base_filename)\n",
         "\n",
-        "# Example usage\n",
         "input_folder = '/content/folder3'\n",
         "output_folder = '/content/folder4'\n",
         "process_images_in_folder(input_folder, output_folder)"
@@ -390,7 +386,6 @@
         "\n",
         "    print(f\"Renamed {len(files)} files in '{folder_path}'.\")\n",
         "\n",
-        "# Example usage\n",
         "folder_path = '/content/folder4'\n",
         "rename_files_sequentially(folder_path)\n"
       ],
@@ -415,7 +410,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Code to delete 'bad' images determined by inspecting all images by hand.\n",
+        "#Code to delete 'bad' images determined by inspecting all images by hand\n",
         "#'bad' images are ones with labeling that obscures the image\n",
         "delete_list = [3344, 1990, 969, 1327, 726, 455, 170, 4615, 2133, 190, 503, 4928, 201, 3381, 4241, 2925, 2706, 113, 1647, 3093, 5,\n",
         "               1050, 1549, 1074, 4807, 4749, 3223, 1935, 151, 4285, 4447, 1338, 1634, 2652, 3510, 4459, 4096, 1295, 4481, 4220, 500,\n",
@@ -437,7 +432,6 @@
         "        else:\n",
         "            print(f\"File not found: {filename}\")\n",
         "\n",
-        "# Example usage\n",
         "folder_path = '/content/folder4'\n",
         "delete_files_in_folder(folder_path, delete_list)\n"
       ],
@@ -589,15 +583,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "STq0ZzO_XNCo"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
