Upload folder.zip from Google Drive link in READ.ME

--- a/Graphene_Classifcation_Models.ipynb
+++ b/Graphene_Classifcation_Models.ipynb
@@ -1682,7 +1682,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the path to the saved model and the image to classify\n",
-        "model_path = 'graphene_classifier_resnet(1).pth'\n",
+        "model_path = 'graphene_classifier_resnet.pth'\n",
         "image_path =  input(\"Path to Image: \")\n",
         "\n",
         "# Load the model\n",
@@ -2003,6 +2003,7 @@
     "colab": {
       "collapsed_sections": [
         "QB5MeBgSxdNw",
+        "FonK-t8VuzSu",
         "C31XmGGD5soM",
         "ZF-99htJ6hKl",
         "Bn3Eq3RPu2vo",
