--- a/Graphene_Data_Cleaning.ipynb
+++ b/Graphene_Data_Cleaning.ipynb
@@ -34,10 +34,8 @@
         "import os\n",
         "\n",
         "def unzip_file(zip_path, extract_to):\n",
-        "    # Ensure the target extraction directory exists\n",
         "    os.makedirs(extract_to, exist_ok=True)\n",
         "\n",
-        "    # Open the zip file and extract its contents\n",
         "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
         "        zip_ref.extractall(extract_to)\n",
         "\n",
@@ -91,27 +89,19 @@
         "import shutil\n",
         "\n",
         "def move_and_rename_images(source_dir, target_dir):\n",
-        "    # Ensure target directory exists\n",
         "    os.makedirs(target_dir, exist_ok=True)\n",
         "\n",
-        "    # Initialize counter for renaming images\n",
         "    image_counter = 30\n",
         "\n",
-        "    # Walk through all subdirectories and files in the source directory\n",
         "    for root, _, files in os.walk(source_dir):\n",
         "        for file in files:\n",
-        "            # Check if the file is an image\n",
         "            if file.lower().endswith(('10x.png', '10x.jpg', '10x.jpeg', '10x.gif', '10x.bmp', '10x.tiff')):\n",
-        "                # Define the new filename with sequential numbering\n",
         "                new_filename = f\"{image_counter}.jpg\"\n",
-        "                # Define full paths for source and target files\n",
         "                src_path = os.path.join(root, file)\n",
         "                dest_path = os.path.join(target_dir, new_filename)\n",
         "\n",
-        "                # Move and rename the image file\n",
         "                shutil.move(src_path, dest_path)\n",
         "\n",
-        "                # Increment the counter for the next image\n",
         "                image_counter += 1\n",
         "\n",
         "    print(f\"Moved and renamed {image_counter - 1} images to {target_dir}.\")\n",
@@ -133,12 +123,11 @@
         "    print(f\"Folder zipped as {zip_path}.zip\")\n",
         "\n",
         "folder_to_zip = '/content/Graphene Clean Dataset/Graphene Clean Dataset/resized_images'\n",
-        "zip_file_path = 'zipfolder'  # No .zip extension needed\n",
+        "zip_file_path = 'zipfolder'  # No .zip extension\n",
         "zip_folder(folder_to_zip, zip_file_path)\n",
         "\n",
         "from google.colab import files\n",
         "\n",
-        "# Downloads the zip file\n",
         "files.download(zip_file_path + '.zip')\n"
       ],
       "metadata": {
@@ -232,32 +221,25 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def split_image_into_56_sections(image_path):\n",
-        "    # Load the image\n",
         "    image = cv2.imread(image_path)\n",
         "    if image is None:\n",
         "        print(f\"Error loading image at {image_path}\")\n",
         "        return []\n",
         "\n",
-        "    # Get image dimensions\n",
         "    height, width, _ = image.shape\n",
         "\n",
-        "    # Calculate the width and height of each section\n",
         "    section_height = height // 7\n",
         "    section_width = width // 8\n",
         "\n",
-        "    # List to store the 56 sections\n",
         "    sections = []\n",
         "\n",
-        "    # Loop through each row and column to slice the sections\n",
         "    for i in range(7):\n",
         "        for j in range(8):\n",
-        "            # Calculate the start and end points for each section\n",
         "            y_start = i * section_height\n",
         "            y_end = (i + 1) * section_height\n",
         "            x_start = j * section_width\n",
         "            x_end = (j + 1) * section_width\n",
         "\n",
-        "            # Slice the section from the image\n",
         "            section = image[y_start:y_end, x_start:x_end]\n",
         "            sections.append(section)\n",
         "\n",
@@ -266,7 +248,6 @@
         "image_path = '/content/folder3/1.jpg'\n",
         "sections = split_image_into_56_sections(image_path)\n",
         "\n",
-        "# Display the 56 sections using matplotlib\n",
         "if sections:\n",
         "    plt.figure(figsize=(10, 8))\n",
         "    for idx, section in enumerate(sections):\n",
@@ -305,47 +286,36 @@
         "import os\n",
         "\n",
         "def split_image_into_56_sections(image_path, output_folder, base_filename):\n",
-        "    # Load the image\n",
         "    image = cv2.imread(image_path)\n",
         "    if image is None:\n",
         "        print(f\"Error loading image at {image_path}\")\n",
         "        return\n",
         "\n",
-        "    # Get image dimensions\n",
         "    height, width, _ = image.shape\n",
         "\n",
-        "    # Calculate the width and height of each section\n",
         "    section_height = height // 7\n",
         "    section_width = width // 8\n",
         "\n",
-        "    # Loop through each row and column to slice the sections\n",
-        "    section_counter = 1  # Initialize section counter\n",
+        "    section_counter = 1\n",
         "    for i in range(7):\n",
         "        for j in range(8):\n",
-        "            # Calculate the start and end points for each section\n",
         "            y_start = i * section_height\n",
         "            y_end = (i + 1) * section_height\n",
         "            x_start = j * section_width\n",
         "            x_end = (j + 1) * section_width\n",
         "\n",
-        "            # Slice the section from the image\n",
         "            section = image[y_start:y_end, x_start:x_end]\n",
         "\n",
-        "            # Save the section to the output folder\n",
         "            section_filename = os.path.join(output_folder, f\"{base_filename}_{section_counter}.jpg\")\n",
         "            cv2.imwrite(section_filename, section)\n",
         "            section_counter += 1\n",
         "\n",
         "def process_images_in_folder(input_folder, output_folder):\n",
-        "    # Ensure the output directory exists\n",
         "    os.makedirs(output_folder, exist_ok=True)\n",
         "\n",
-        "    # Loop through each file in the input folder\n",
         "    for filename in os.listdir(input_folder):\n",
-        "        # Check if the file is an image\n",
         "        if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp', '.tiff')):\n",
         "            image_path = os.path.join(input_folder, filename)\n",
-        "            # Use the filename without extension as base for saving sections\n",
         "            base_filename = os.path.splitext(filename)[0]\n",
         "            split_image_into_56_sections(image_path, output_folder, base_filename)\n",
         "\n",
@@ -366,22 +336,16 @@
         "import os\n",
         "\n",
         "def rename_files_sequentially(folder_path):\n",
-        "    # List all files in the directory\n",
         "    files = os.listdir(folder_path)\n",
         "\n",
-        "    # Loop through each file and rename it\n",
         "    for index, filename in enumerate(files, start=1):\n",
-        "        # Get the full path of the original file\n",
         "        old_file_path = os.path.join(folder_path, filename)\n",
         "\n",
-        "        # Get the file extension\n",
         "        file_extension = os.path.splitext(filename)[1]\n",
         "\n",
-        "        # Create the new file name\n",
         "        new_file_name = f\"{index}{file_extension}\"\n",
         "        new_file_path = os.path.join(folder_path, new_file_name)\n",
         "\n",
-        "        # Rename the file\n",
         "        os.rename(old_file_path, new_file_path)\n",
         "\n",
         "    print(f\"Renamed {len(files)} files in '{folder_path}'.\")\n",
@@ -420,12 +384,9 @@
         "import os\n",
         "\n",
         "def delete_files_in_folder(folder_path, delete_list):\n",
-        "    # Loop through each file in the delete list\n",
         "    for filename in delete_list:\n",
-        "        # Create the full path to the file\n",
         "        file_path = os.path.join(folder_path, str(filename)+'.jpg')\n",
         "\n",
-        "        # Check if the file exists and delete it\n",
         "        if os.path.isfile(file_path):\n",
         "            os.remove(file_path)\n",
         "            print(f\"Deleted: {filename}\")\n",
@@ -550,18 +511,14 @@
         "\n",
         "folder_path = '/content/Graphene Clean Dataset/Graphene Clean Dataset'\n",
         "\n",
-        "# Create a new folder to save resized images\n",
         "resized_folder_path = os.path.join(folder_path, 'resized_images')\n",
         "os.makedirs(resized_folder_path, exist_ok=True)\n",
         "\n",
-        "# Iterate over all files in the folder\n",
         "for filename in os.listdir(folder_path):\n",
-        "    if filename.endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp')):  # Check for image file extensions\n",
+        "    if filename.endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp')):\n",
         "        image_path = os.path.join(folder_path, filename)\n",
         "        with Image.open(image_path) as img:\n",
-        "            # Resize the image\n",
         "            img_resized = img.resize((640, 640))\n",
-        "            # Save the resized image to the new folder\n",
         "            img_resized.save(os.path.join(resized_folder_path, filename))\n",
         "\n",
         "print(f'Resized images saved to: {resized_folder_path}')\n"
