--- a/Graphene_Classification_YOLO.ipynb
+++ b/Graphene_Classification_YOLO.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "v96i1XzWOcCx"
       ],
-      "authorship_tag": "ABX9TyPaX2FXiP15Il2aQDWoyoCl",
+      "authorship_tag": "ABX9TyOJronvA9shqTfWBnqUv2uX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "!pip install gdown --quiet\n",
+        "\n",
+        "file_id = \"1U37JldmQKrCFXyBsEyuIodbpz5S5HNMP\"\n",
+        "output_name = \"folder.zip\"\n",
+        "\n",
+        "download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "!gdown {download_url} -O {output_name}\n",
+        "\n",
+        "file_id2 = \"1lzVP8Hw-icwFibglytB9MJpxG13NhEkQ\"\n",
+        "output_name = \"graphene.jpg\"\n",
+        "\n",
+        "download_url = f\"https://drive.google.com/uc?id={file_id2}\"\n",
+        "!gdown {download_url} -O {output_name}"
+      ],
+      "metadata": {
+        "id": "DidWCImti0X2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,7 +74,6 @@
         }
       ],
       "source": [
-        "#Zip file of images downloaded from Google Drive and uploaded to Colab (folder.zip)\n",
         "import zipfile\n",
         "import os\n",
         "\n",
@@ -128,7 +150,7 @@
         "id": "W5ltcYZ7aKnQ",
         "outputId": "ea2f9334-be45-4a0a-a0ce-031724cd664c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +235,7 @@
         "id": "7yeH96MKaNmI",
         "outputId": "0acb587d-5204-4040-9754-620071ce1b27"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +261,7 @@
         "id": "I8ae_bzBaXm0",
         "outputId": "cfc1a228-171e-4725-9736-63a465f4a86b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,8 +885,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Test Model on Specified Image\n",
-        "The cell below is desired to work in the event that the user uploads the folder.zip file and presses run all. If it is desired to run the cell below without training a new model, the first line needs to be uncommented and the model path needs to be changed. It is unlikely but possible that YOLO will output saved weights to a path other than the model path specified below. In this event, search through the Google Colab file directory for /content/runs/detect. There will then be a series of numbered train folders such as train1, train2, ... Each of these folders has a weights subfolder. Copy the path to best.pt in the weights subfolder and paste it as the model path below."
+        "#Test Model on Specified Image\n"
       ],
       "metadata": {
         "id": "v96i1XzWOcCx"
@@ -880,8 +901,8 @@
         "\n",
         "# Load the trained YOLO model #Replace with path to trained weights or path to saved model weights from Google Drive\n",
         "model = YOLO('/content/runs/detect/train/weights/best.pt')\n",
-        "# Path to image\n",
-        "image_path = input(\"Path to Image: \")\n",
+        "image_path = '/content/graphene.jpg'\n",
+        "#image_path =  input(\"Path to Image: \")\n",
         "\n",
         "results = model(image_path)\n",
         "\n",
@@ -918,7 +939,7 @@
         "id": "sR8mMR2Klzcn",
         "outputId": "225d7625-6da9-40ce-e13b-c61f864f01d2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
